[package]
name = "raft_for_beginners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
clap = { version = "~3.2.22", features = ["derive", "env"] }
derive_more = "0.99.17"
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-tree = "0.2.1"
