[package]
name = "raft_for_beginners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
atomic_enum = "0.2.0"
clap = { version = "~3.2.22", features = ["derive", "env"] }
derive_more = "0.99.17"
k9 = "0.11.5"
postcard = { version = "1.0.2", features = ["alloc"] }
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-tree = "0.2.1"
