[package]
name = "raft_for_beginners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
clap = { version = "~3.2.22", features = ["derive", "env"] }
derive_more = "0.99.17"
k9 = "0.11.5"
rand = "0.8.5"
rmp-serde = "1.1.1"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-forest = { version = "0.1.4", features = ["full"] }
